--- a/template/index.html
+++ b/template/index.html
@@ -255,7 +255,7 @@
             </div>
             <div class="col-md-6">
                 <div class="detail-box ps-md-4">
-                    <h2 class="section-heading mt-4">About Energym</h2>
+                    <h2 class="section-heading mt-4">About RAD FITNESS</h2>
                     <p class="text-muted lead">
                         At Energym, we provide more than just equipment. We provide the tools to build a better version of yourself. From high-performance strength gear to elite CrossFit tools.
                     </p>
@@ -265,7 +265,7 @@
         </div>
     </div>
 </section>
-<div class="container mt-5 pt-4">
+<div class="container mt-5 pt-4 mb-5">
     <h3 class="mb-4 fw-bold text-dark border-start border-4 border-primary ps-3">
         Related Products
     </h3>
@@ -343,7 +343,7 @@
     </div>
 </div>
 
-<section class="us_section layout_padding bg-dark text-white py-5">
+<section class="us_section layout_padding bg-dark text-white py-5 mt-5">
     <div class="container">
         <div class="heading_container text-center">
             <h2 class="text-white mb-5">Why Choose Energym Gear?</h2>
